    * FIX: FileManager link in WebUI
    * FIX: back from playback in FileManager had mixed paths
    * ADD: TFTP server service for early boot recovery (3 stages) - uploads need to be authenticated by TV serial number
    * ADD: text files and images viewer in FileManager that's usable with remote control
    * UPDATE: improve Yavido alternative with bigger font, arrows navigation and shorter refresh time

0.5.0-beta2:

    * FIX: DLNA servers/shares visibility
    * FIX: OpenLGTV BCM, WWW, Yahoo Widgets icons removal when disabled in WebUI
    * ADD: VOB, MPEG, DAT, ASF, MTS file extensions for FileManager playback
    * ADD: support for both lower and uppercase file extensions for FileManager playback (but mixed case extensions are not supported)
    * ADD: precache parameter for Network Shares to cache directories list (workaround for invisible dirs on some NFS shares)
    * ADD: posibility to use custom msdl and web browser certificates from /mnt/user/netcast/opt dir
    * ADD: PIN authorization for local (on-screen) WebUI access - something like parental lock, authorization cgi can be used to PIN-lock any web page
    * ADD: EtherWake WebUI submenu with possibility to add/edit/delete devices to wake (via 'Wake' button or to wake on boot)
    * ADD: unified for all platforms info.sh script by mmm4m5m from LGMOD S7
    * ADD: support for future OpenLGTV_BCM/extroot.tar.gz package and OpenLGTV_BCM/extroot dir on USB storage partititions (should be NTFS formated)
    * UPDATE: updated BusyBox from 1.19.2 to 1.19.3 and get rid of busybox2 symlink
    * CHANGE: time for USB mouse detection on boot raised from 18 to 19 seconds - less probability to get mouse not detected
    * CHANGE: Network Shares Mount and Ether-Wake performance improvements in both WebUI and boot scripts
    * CHANGE: rc.firewall behavior change to drop routes instead of binding local interface IPs

0.5.0-beta1:

    * FIX: ywe first time configuration
    * FIX: abc.net.au link fix