@@ -46,6 +46,9 @@ then
     exit 0
 fi
 
+usbport=usb1
+[ "$4" != "" ] && usbport="$4"
+
 sleep 1
 
 while [ -z "`grep -m 1 ^/dev/$device /proc/mounts`" ]
@@ -55,25 +58,6 @@ do
     if [ $k -gt 10 ]; then break; fi
     #if [ $k -gt 30 ]; then break; fi
 done
-
-#export fstype=`blkid /dev/$device | sed -e 's/^.*TYPE="//g' -e 's/".*//g'`
-#echo "OpenLGTV_BCM-INFO: USB storage device: \"$device\" connected, fstype: \"$fstype\""
-
-# TODO: make actions for mounting ext3 and ext3 but first need to find empty mountpoint
-
-for jj in 1 2 3 4
-do
-    for ii in 1 2
-    do
-	OpenLGTV_BCM_USB="/mnt/usb$ii/Drive$jj/OpenLGTV_BCM"
-	USB_DIR="/mnt/usb$ii/Drive$jj"
-	[ -d "$OpenLGTV_BCM_USB" ] && break 2
-    done
-done
-export OpenLGTV_BCM_USB USB_DIR                                                 # /mnt/usb1/Drive1/OpenLGTV_BCM /mnt/usb1/Drive1
-export USB_FULLDEV="`grep -m 1 \" $USB_DIR \" /proc/mounts | cut -d\" \" -f 1`" # /dev/sda1
-export USB_DEV="${USB_FULLDEV:5:3}"                                             # sda
-
 for jj in 1 2 3 4
 do
     for ii in 1 2
@@ -138,6 +122,20 @@ fi
 
 source /etc/rc.d/rc.usb-remount
 
+for jj in 1 2 3 4 5 6
+do
+    for ii in 1 2
+    do
+	OpenLGTV_BCM_USB="/mnt/usb$ii/Drive$jj/OpenLGTV_BCM"
+	USB_DIR="/mnt/usb$ii/Drive$jj"
+	[ -d "$OpenLGTV_BCM_USB" ] && break 2
+    done
+done
+export OpenLGTV_BCM_USB USB_DIR                                                 # /mnt/usb1/Drive1/OpenLGTV_BCM /mnt/usb1/Drive1
+export USB_FULLDEV="`grep -m 1 \" $USB_DIR \" /proc/mounts | cut -d\" \" -f 1`" # /dev/sda1
+export USB_DEV="${USB_FULLDEV:5:3}"                                             # sda
+export USB_DIR_FS="`grep -m 1 \" $USB_DIR \" /proc/mounts | cut -d\" \" -f 3`"  # ntfs
+
 if [ -d "$OpenLGTV_BCM_USB" -a "$USB_DEV" = "$device" ]
 then
     echo "OpenLGTV_BCM-INFO: found OpenLGTV_BCM dir: $OpenLGTV_BCM_USB on mounted USB storage device in $k seconds..."
@@ -194,7 +192,7 @@ then
     fi
     if [ -d "$OpenLGTV_BCM_USB/ywedata" -o -d "$OpenLGTV_BCM_USB/ywe" -o -f "$OpenLGTV_BCM_USB/ywe.tar.gz" ]
     then
-        echo "OpenLGTV_BCM-INFO: found at ywe or ywedata dirs or ywe.tar.gz file in $OpenLGTV_BCM_USB/ - executing Yahoo Widgets configs setup again"
+        echo "OpenLGTV_BCM-INFO: found ywe or ywedata dirs or ywe.tar.gz file in $OpenLGTV_BCM_USB/ - executing Yahoo Widgets configs setup again"
         source /etc/rc.d/rc.ywe
     fi
     if [ -f "$OpenLGTV_BCM_USB/extroot.tar.gz" ]
